iac/manifests/namespaces.yaml
apiVersion: v1
kind: Namespace
metadata:
  creationTimestamp: null
  name: prometheus

---

apiVersion: v1
kind: Namespace
metadata:
  creationTimestamp: null
  name: grafana

---
