iac/manifests/express-app.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: express-app
  name: express-app
spec:
  replicas: 2
  selector:
    matchLabels:
      app: express-app
  strategy: {}
  template:
    metadata:
      labels:
        app: express-app
    spec:
      containers:
      - image: michaeldbianchi/express-app
        name: express-app
        ports:
        - containerPort: 3000
        resources:
          requests:
            cpu: "500m"

---

apiVersion: v1
kind: Service
metadata:
  name: express-app
  annotations:
    service.beta.kubernetes.io/aws-load-balancer-type: nlb
spec:
  selector:
    app: express-app
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 3000
    - name: https
      protocol: TCP
      port: 443
      targetPort: 3000
  type: LoadBalancer

---
