iac/manifests/express-app.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: express-app
  name: express-app
spec:
  replicas: 2
  selector:
    matchLabels:
      app: express-app
  strategy: {}
  template:
    metadata:
      labels:
        app: express-app
    spec:
      containers:
      - image: michaeldbianchi/express-app
        name: express-app
        ports:
        - containerPort: 3000
        resources:
          requests:
            cpu: 500m

---

apiVersion: v1
kind: Service
metadata:
  name: express-app
spec:
  selector:
    app: express-app
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 3000

---

apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: ingress-express-app
  namespace: default
  annotations:
    # use the shared ingress-nginx
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
  - http:
      paths:
      - path: /
        backend:
          serviceName: express-app
          servicePort: 80
