iac/manifests/ingress.yaml

apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ingress-contour
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
spec:
  rules:
    - http:
        paths:
          - path: /*
            backend:
              serviceName: express-app
              servicePort: 80
